# bevy-spatial

./: .gitignore  Cargo.toml  Deploy.md  LICENSE.md  README.md  TODO.md  deny.toml
.cargo/: config.toml
.github/workflows/: dependencies.yml
benches/: grid.rs  hash.rs  index.rs  kdtree.rs  kdtrees.rs  map.rs  quadtree.rs  rstartree.rs
examples/: aabb_visualize.rs  aabb_visualize3d.rs  distance2d.rs  distance3d.rs  modify_timestep.rs  move_to_nearest.rs  movetowards.rs  nn.rs  t.rs  test.rs  visualise_grid.rs  within2d.rs
src/: aabb.rs  aabb_impls.rs  automatic_systems.rs  common.rs  coord_extract.rs  datacontainer.rs  debug_aabb.rs  debug_draw_utils.rs  kdtree.rs  lib.rs  plugin.rs  point.rs  resources_components.rs  spatial_access.rs  test_plugin.rs  timestep.rs  types.rs
src/common/: scan_patterns.rs  utils.rs
src/datastructures/: simple_hash.rs  spatial_grid_2d.rs
src/kdtree/: common.rs  mod.rs
src/kdtree/kdtree2d/: kdtree.rs  mod.rs  plugin.rs
src/rtree/: common.rs  mod.rs  rtree2d.rs  rtree3d.rs
src/rtree/rtree2d/: plugin.rs  rtree_obj.rs
src/rtree/rtree3d/: mod.rs  plugin.rs  rtree_obj.rs  systems.rs
