[package]
name = "bevy_spatial"
description = "A crate for tracking bevy entities in spatial indices."
documentation = "https://docs.rs/bevy_spatial"
version = "0.5.0"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["gamedev", "bevy", "kdtree", "knn", "nearest-neighbour"]
repository = "https://github.com/laundmo/bevy-spatial"
readme = "README.md"
authors = ["laundmo"]

[dependencies]
bevy = { version = "0.10", default-features = false }
# KD-Tree dependencies
kd-tree = { version = "0.5.1", optional = true, features = ["rayon"] }
typenum = { version = "1.15.0" }
num-traits = { version = "0.2.15" }


[features]
default = ["kdtree"]
kdtree = ["dep:kd-tree"]

[dev-dependencies]
bevy = { version = "0.10" }
rand = "0.8.5"
wasm-server-runner = "0.4.0"

# without the rayon feature 
[target.'cfg(target_arch = "wasm32")'.dependencies]
kd-tree = { version = "0.5.1", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true


[[example]]
name = "distance2d"
required-features = ["kdtree"]

[[example]]
name = "distance3d"
required-features = ["kdtree"]

[[example]]
name = "modify_timestep"
required-features = ["kdtree"]

[[example]]
name = "movetowards"
required-features = ["kdtree"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
