[package]
name = "bevy_spatial"
description = "A crate for tracking bevy entities in spatial indices."
documentation = "https://docs.rs/bevy_spatial"
version = "0.10.0"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["gamedev", "bevy", "kdtree", "spatial", "neighbour"]
repository = "https://github.com/laundmo/bevy-spatial"
readme = "README.md"
authors = ["laund <me@laund.moe>"]

[dependencies]
bevy = { version = "0.15", default-features = false }
# KD-Tree dependencies
kd-tree = { version = "0.6.0", optional = true }
typenum = { version = "1.17.0" }
num-traits = { version = "0.2.19" }

[features]
default = ["kdtree_rayon"]
kdtree_rayon = ["kdtree", "kd-tree/rayon"]
kdtree = ["dep:kd-tree"]

[dev-dependencies]
bevy = { version = "0.15" }
rand = "0.8.5"
wasm-server-runner = "0.6.3"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true


[[example]]
name = "distance2d"
required-features = ["kdtree"]

[[example]]
name = "distance3d"
required-features = ["kdtree"]

[[example]]
name = "modify_timestep"
required-features = ["kdtree"]

[[example]]
name = "movetowards"
required-features = ["kdtree"]
